--- a/rev/src/App.css
+++ b/rev/src/App.css
@@ -5,6 +5,12 @@
   text-align: center;
 }
 
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
