--- a/redux-exemple/src/component/TodoItem/style.scss
+++ b/redux-exemple/src/component/TodoItem/style.scss
@@ -1,3 +1,41 @@
 .TodoItem {
+  border: 1px solid #888888;
+  border-radius: 16px;
+  padding: 8px 16px;
 
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 32px;
+
+  .link {
+    transition: all .3s ease-in;
+  }
+  .link.complete {
+    text-decoration: line-through;
+    color: #6f71e5;
+  }
+
+  .checkbox {
+    height: 30px;
+    width: 30px;
+    border: 3px solid #888888;
+    border-radius: 50%;
+    transition: .3s all ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &.checked {
+      background: #535bf2;
+      box-shadow: 0 0 10px 0 #1a1a1a inset;
+    }
+
+    input {
+      cursor: pointer;
+      opacity: 0;
+      width:100%;
+      aspect-ratio: 1/1;
+    }
+  }
 }
